--- a/OKRPerformanceManagement.Web/Views/Employee/ViewOKR.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Employee/ViewOKR.cshtml
@@ -72,149 +72,7 @@
                     </div>
                     <div class="card-body">
                         <!-- Objectives and Key Results Table -->
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-striped">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th rowspan="2">Objective</th>
-                                        <th rowspan="2">KR Weight</th>
-                                        <th rowspan="2">OKR Name</th>
-                                        <th rowspan="2">Target</th>
-                                        <th rowspan="2">Measure</th>
-                                        <th rowspan="2">Objectives</th>
-                                        <th rowspan="2">Measurement/Tracking Source</th>
-                                        <th rowspan="2">Final Weighting</th>
-                                        <th colspan="3" class="text-center">Rating</th>
-                                        <th rowspan="2">Comments</th>
-                                    </tr>
-                                    <tr>
-                                        <th>Manager</th>
-                                        <th>Employee</th>
-                                        <th>Final</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model.Objectives != null && Model.Objectives.Any())
-                                    {
-                                        @foreach (var objective in Model.Objectives)
-                                        {
-                                            <tr>
-                                                <td rowspan="@(objective.KeyResults?.Count ?? 1)" class="align-middle">
-                                                    <strong>@objective.Name</strong>
-                                                </td>
-                                                <td rowspan="@(objective.KeyResults?.Count ?? 1)" class="align-middle text-center">
-                                                    @objective.Weight.ToString("F2")%
-                                                </td>
-                                                @if (objective.KeyResults != null && objective.KeyResults.Any())
-                                                {
-                                                    var firstKR = objective.KeyResults.First();
-                                                    <td>@firstKR.Name</td>
-                                                    <td>@firstKR.Target</td>
-                                                    <td>@firstKR.Measure</td>
-                                                    <td>@firstKR.Objectives</td>
-                                                    <td>@firstKR.MeasurementSource</td>
-                                                    <td class="text-center">@firstKR.Weight.ToString("F2")%</td>
-                                                    <td class="text-center">
-                                                        @if (firstKR.ManagerRating.HasValue)
-                                                        {
-                                                            <span class="badge badge-info">@firstKR.ManagerRating.Value</span>
-                                                        }
-                                                        else
-                                                        {
-                                                            <span class="text-muted">-</span>
-                                                        }
-                                                    </td>
-                                                    <td class="text-center">
-                                                        @if (firstKR.EmployeeRating.HasValue)
-                                                        {
-                                                            <span class="badge badge-warning">@firstKR.EmployeeRating.Value</span>
-                                                        }
-                                                        else
-                                                        {
-                                                            <span class="text-muted">-</span>
-                                                        }
-                                                    </td>
-                                                    <td class="text-center">
-                                                        @if (firstKR.FinalRating.HasValue)
-                                                        {
-                                                            <span class="badge badge-success">@firstKR.FinalRating.Value</span>
-                                                        }
-                                                        else
-                                                        {
-                                                            <span class="text-muted">-</span>
-                                                        }
-                                                    </td>
-                                                    <td>@(firstKR.FinalComments ?? firstKR.ManagerComments ?? firstKR.EmployeeComments ?? "")</td>
-                                                }
-                                                else
-                                                {
-                                                    <td colspan="8" class="text-center text-muted">No Key Results</td>
-                                                }
-                                            </tr>
-                                            @if (objective.KeyResults != null && objective.KeyResults.Count > 1)
-                                            {
-                                                @for (int i = 1; i < objective.KeyResults.Count; i++)
-                                                {
-                                                    var kr = objective.KeyResults.ToList()[i];
-                                                    <tr>
-                                                        <td>@kr.Name</td>
-                                                        <td>@kr.Target</td>
-                                                        <td>@kr.Measure</td>
-                                                        <td>@kr.Objectives</td>
-                                                        <td>@kr.MeasurementSource</td>
-                                                        <td class="text-center">@kr.Weight.ToString("F2")%</td>
-                                                        <td class="text-center">
-                                                            @if (kr.ManagerRating.HasValue)
-                                                            {
-                                                                <span class="badge badge-info">@kr.ManagerRating.Value</span>
-                                                            }
-                                                            else
-                                                            {
-                                                                <span class="text-muted">-</span>
-                                                            }
-                                                        </td>
-                                                        <td class="text-center">
-                                                            @if (kr.EmployeeRating.HasValue)
-                                                            {
-                                                                <span class="badge badge-warning">@kr.EmployeeRating.Value</span>
-                                                            }
-                                                            else
-                                                            {
-                                                                <span class="text-muted">-</span>
-                                                            }
-                                                        </td>
-                                                        <td class="text-center">
-                                                            @if (kr.FinalRating.HasValue)
-                                                            {
-                                                                <span class="badge badge-success">@kr.FinalRating.Value</span>
-                                                            }
-                                                            else
-                                                            {
-                                                                <span class="text-muted">-</span>
-                                                            }
-                                                        </td>
-                                                        <td>@(kr.FinalComments ?? kr.ManagerComments ?? kr.EmployeeComments ?? "")</td>
-                                                    </tr>
-                                                }
-                                            }
-                                        }
-                                    }
-                                    else
-                                    {
-                                        <tr>
-                                            <td colspan="12" class="text-center text-muted">No Objectives Found</td>
-                                        </tr>
-                                    }
-                                </tbody>
-                                <tfoot>
-                                    <tr class="table-info">
-                                        <td colspan="7" class="text-right"><strong>Must add up to 100</strong></td>
-                                        <td class="text-center"><strong>100%</strong></td>
-                                        <td colspan="4"></td>
-                                    </tr>
-                                </tfoot>
-                            </table>
-                        </div>
+                        @await Html.PartialAsync("_OKRComprehensiveTable", Model)
 
                         <!-- Sign-Off and Acceptance Section -->
                         <div class="row mt-5">
