--- a/OKRPerformanceManagement.Web/Views/Manager/ReviewDetails.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/ReviewDetails.cshtml
@@ -73,74 +73,7 @@
                     <h6 class="m-0 font-weight-bold text-primary">Objectives and Key Results</h6>
                 </div>
                 <div class="card-body">
-                    @foreach (var objective in Model.Objectives.OrderBy(o => o.SortOrder))
-                    {
-                        <div class="mb-4">
-                            <h5 class="font-weight-bold text-primary">@objective.Name</h5>
-                            <p class="text-muted">@objective.Description</p>
-                            <p><strong>Weight:</strong> @objective.Weight%</p>
-
-                            <div class="table-responsive">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <tr>
-                                            <th>Key Result</th>
-                                            <th>Target</th>
-                                            <th>Employee Rating</th>
-                                            <th>Employee Comments</th>
-                                            <th>Manager Rating</th>
-                                            <th>Manager Comments</th>
-                                            <th>Final Rating</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var keyResult in objective.KeyResults.OrderBy(kr => kr.SortOrder))
-                                        {
-                                            <tr>
-                                                <td>
-                                                    <strong>@keyResult.Name</strong><br>
-                                                    <small class="text-muted">@keyResult.Objectives</small>
-                                                </td>
-                                                <td>@keyResult.Target</td>
-                                                <td>
-                                                    @if (keyResult.EmployeeRating.HasValue)
-                                                    {
-                                                        <span class="badge badge-info">@keyResult.EmployeeRating</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="text-muted">Not rated</span>
-                                                    }
-                                                </td>
-                                                <td>@keyResult.EmployeeComments</td>
-                                                <td>
-                                                    @if (keyResult.ManagerRating.HasValue)
-                                                    {
-                                                        <span class="badge badge-warning">@keyResult.ManagerRating</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="text-muted">Not rated</span>
-                                                    }
-                                                </td>
-                                                <td>@keyResult.ManagerComments</td>
-                                                <td>
-                                                    @if (keyResult.FinalRating.HasValue)
-                                                    {
-                                                        <span class="badge badge-success">@keyResult.FinalRating</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="text-muted">Not finalized</span>
-                                                    }
-                                                </td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    }
+                    @await Html.PartialAsync("_OKRComprehensiveTable", Model)
                 </div>
             </div>
         </div>
